# hs-playground

./: .gitignore  Readme.md  demo.json  project.cabal
.github/workflows/: haskell.yml
app/: Main.hs
practices/logdemo/: ParseFlags.hs
practices/monads/: TryError.hs  TryReader.hs  TryState.hs  TryWriter.hs
shgpt/: Main.hs  readme.md
shgpt/src/: Pipe.hs
src/: MyLib.hs  TsDemo.hs
src/logdemo/: Readme.md
src/monads/: TryReader.hs  TryState.hs  TryState_Bst.hs  TryWriter.hs
src/monadt/: Readme.md  TryCombineMonads.hs  TryExceptTAndIO.hs  TryMaybeT.hs
