cabal-version:      2.4
name:               project
version:            0.1.0.0

library monadt
    exposed-modules:  
        TryCombineMonads
        , TryMaybeT
        , TryExceptTAndIO 
    build-depends:    
        base ^>=4.16.4.0,
        mtl,
        text,
        transformers
    hs-source-dirs:   src/monadt
    default-language: Haskell2010

library monads
    exposed-modules:  
        TryWriter
        ,TryReader
        ,TryState
        ,TryError
        ,TryState_Bst
    build-depends:    
        base ^>=4.16.4.0,
        mtl,
        transformers,
        random
    hs-source-dirs:   src/monads
    default-language: Haskell2010


executable project
    main-is:          Main.hs

    build-depends:
        base ^>=4.16.4.0,
        mtl,
        transformers,
        monads,
        monadt,
    hs-source-dirs:   .
    default-language: Haskell2010
