cabal-version:      2.4
name:               project
version: 0.1.0.0
common common-depends
    build-depends:
        base >= 4.14 && < 4.17,
        mtl,
        text,
        transformers,
        random

library logdemo
    import: common-depends
    exposed-modules:  
        ParseFlags
    hs-source-dirs:   src/logdemo
    default-language: Haskell2010

library monadt
    import: common-depends
    exposed-modules:  
        TryCombineMonads
        , TryMaybeT
        , TryExceptTAndIO 
    hs-source-dirs:   src/monadt
    default-language: Haskell2010

library monads
    import: common-depends
    exposed-modules:  
        TryWriter
        ,TryReader
        ,TryState
        ,TryError
        ,TryState_Bst
    
    hs-source-dirs:   src/monads
    default-language: Haskell2010


executable project
    import: common-depends
    main-is:          Main.hs 
    build-depends:
        monads,
        monadt,
        logdemo
    hs-source-dirs:   .
    default-language: Haskell2010